[gd_scene load_steps=22 format=2]

[ext_resource path="res://addons/controller_icons/objects/TextureRect.gd" type="Script" id=1]
[ext_resource path="res://addons/controller_icons/example/IconRemapper.gd" type="Script" id=2]
[ext_resource path="res://addons/controller_icons/assets/xbox360/a.png" type="Texture" id=3]
[ext_resource path="res://addons/controller_icons/assets/xbox360/x.png" type="Texture" id=4]
[ext_resource path="res://addons/controller_icons/assets/xbox360/b.png" type="Texture" id=5]
[ext_resource path="res://addons/controller_icons/assets/xbox360/dpad_right.png" type="Texture" id=6]
[ext_resource path="res://addons/controller_icons/assets/xbox360/l_stick_click.png" type="Texture" id=7]
[ext_resource path="res://addons/controller_icons/assets/xbox360/r_stick_click.png" type="Texture" id=8]
[ext_resource path="res://addons/controller_icons/assets/xbox360/rb.png" type="Texture" id=9]
[ext_resource path="res://addons/controller_icons/assets/xbox360/rt.png" type="Texture" id=10]
[ext_resource path="res://addons/controller_icons/assets/xbox360/back.png" type="Texture" id=11]
[ext_resource path="res://addons/controller_icons/assets/xbox360/r_stick.png" type="Texture" id=12]
[ext_resource path="res://addons/controller_icons/assets/xbox360/start.png" type="Texture" id=13]
[ext_resource path="res://addons/controller_icons/assets/xbox360/dpad_down.png" type="Texture" id=14]
[ext_resource path="res://addons/controller_icons/assets/xbox360/lt.png" type="Texture" id=15]
[ext_resource path="res://addons/controller_icons/assets/xbox360/y.png" type="Texture" id=16]
[ext_resource path="res://addons/controller_icons/assets/xbox360/lb.png" type="Texture" id=17]
[ext_resource path="res://addons/controller_icons/assets/xbox360/dpad.png" type="Texture" id=18]
[ext_resource path="res://addons/controller_icons/assets/xbox360/l_stick.png" type="Texture" id=19]
[ext_resource path="res://addons/controller_icons/assets/xbox360/dpad_up.png" type="Texture" id=20]
[ext_resource path="res://addons/controller_icons/assets/xbox360/dpad_left.png" type="Texture" id=21]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 60.0
margin_right = -567.0
margin_bottom = -60.0
script = ExtResource( 2 )

[node name="Controls" type="Control" parent="."]
margin_right = 357.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Controls"]
margin_right = 357.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Controls/HBoxContainer"]
margin_right = 176.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="A" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_right = 176.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/A"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 3 )
expand = true
script = ExtResource( 1 )
path = "joypad/a"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/A"]
margin_left = 40.0
margin_top = 13.0
margin_right = 53.0
margin_bottom = 27.0
text = " A"

[node name="B" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 176.0
margin_bottom = 84.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/B"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 5 )
expand = true
script = ExtResource( 1 )
path = "joypad/b"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/B"]
margin_left = 40.0
margin_top = 13.0
margin_right = 53.0
margin_bottom = 27.0
text = " B"

[node name="X" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 176.0
margin_bottom = 128.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/X"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 4 )
expand = true
script = ExtResource( 1 )
path = "joypad/x"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/X"]
margin_left = 40.0
margin_top = 13.0
margin_right = 52.0
margin_bottom = 27.0
text = " X"

[node name="Y" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 176.0
margin_bottom = 172.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/Y"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 16 )
expand = true
script = ExtResource( 1 )
path = "joypad/y"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/Y"]
margin_left = 40.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 27.0
text = " Y"

[node name="LB" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 176.0
margin_bottom = 216.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/LB"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 17 )
expand = true
script = ExtResource( 1 )
path = "joypad/lb"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/LB"]
margin_left = 40.0
margin_top = 13.0
margin_right = 115.0
margin_bottom = 27.0
text = " Left Button"

[node name="RB" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 176.0
margin_bottom = 260.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/RB"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 9 )
expand = true
script = ExtResource( 1 )
path = "joypad/rb"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/RB"]
margin_left = 40.0
margin_top = 13.0
margin_right = 123.0
margin_bottom = 27.0
text = " Right Button"

[node name="LT" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 176.0
margin_bottom = 304.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/LT"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 15 )
expand = true
script = ExtResource( 1 )
path = "joypad/lt"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/LT"]
margin_left = 40.0
margin_top = 13.0
margin_right = 115.0
margin_bottom = 27.0
text = " Left Trigger"

[node name="RT" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 176.0
margin_bottom = 348.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/RT"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 10 )
expand = true
script = ExtResource( 1 )
path = "joypad/rt"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/RT"]
margin_left = 40.0
margin_top = 13.0
margin_right = 123.0
margin_bottom = 27.0
text = " Right Trigger"

[node name="L_Stick_Click" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 176.0
margin_bottom = 392.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/L_Stick_Click"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 7 )
expand = true
script = ExtResource( 1 )
path = "joypad/l_stick_click"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/L_Stick_Click"]
margin_left = 40.0
margin_top = 13.0
margin_right = 136.0
margin_bottom = 27.0
text = " Left Stick Click"

[node name="R_Stick_Click" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 176.0
margin_bottom = 436.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/R_Stick_Click"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 8 )
expand = true
script = ExtResource( 1 )
path = "joypad/r_stick_click"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/R_Stick_Click"]
margin_left = 40.0
margin_top = 13.0
margin_right = 144.0
margin_bottom = 27.0
text = " Right Stick Click"

[node name="Select" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer"]
margin_top = 440.0
margin_right = 176.0
margin_bottom = 480.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer/Select"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 11 )
expand = true
script = ExtResource( 1 )
path = "joypad/select"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer/Select"]
margin_left = 40.0
margin_top = 13.0
margin_right = 83.0
margin_bottom = 27.0
text = " Select"

[node name="VBoxContainer2" type="VBoxContainer" parent="Controls/HBoxContainer"]
margin_left = 180.0
margin_right = 357.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer2"]
margin_right = 177.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer2/Start"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 13 )
expand = true
script = ExtResource( 1 )
path = "joypad/start"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer2/Start"]
margin_left = 40.0
margin_top = 13.0
margin_right = 73.0
margin_bottom = 27.0
text = " Start"

[node name="DPAD" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer2"]
margin_top = 44.0
margin_right = 177.0
margin_bottom = 84.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer2/DPAD"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 18 )
expand = true
script = ExtResource( 1 )
path = "joypad/dpad"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer2/DPAD"]
margin_left = 40.0
margin_top = 13.0
margin_right = 81.0
margin_bottom = 27.0
text = " DPAD"

[node name="DPAD_Up" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer2"]
margin_top = 88.0
margin_right = 177.0
margin_bottom = 128.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer2/DPAD_Up"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 20 )
expand = true
script = ExtResource( 1 )
path = "joypad/dpad_up"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer2/DPAD_Up"]
margin_left = 40.0
margin_top = 13.0
margin_right = 103.0
margin_bottom = 27.0
text = " DPAD Up"

[node name="DPAD_Down" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer2"]
margin_top = 132.0
margin_right = 177.0
margin_bottom = 172.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer2/DPAD_Down"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 14 )
expand = true
script = ExtResource( 1 )
path = "joypad/dpad_down"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer2/DPAD_Down"]
margin_left = 40.0
margin_top = 13.0
margin_right = 121.0
margin_bottom = 27.0
text = " DPAD Down"

[node name="DPAD_Left" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer2"]
margin_top = 176.0
margin_right = 177.0
margin_bottom = 216.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer2/DPAD_Left"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 21 )
expand = true
script = ExtResource( 1 )
path = "joypad/dpad_left"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer2/DPAD_Left"]
margin_left = 40.0
margin_top = 13.0
margin_right = 109.0
margin_bottom = 27.0
text = " DPAD Left"

[node name="DPAD_Right" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer2"]
margin_top = 220.0
margin_right = 177.0
margin_bottom = 260.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer2/DPAD_Right"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 6 )
expand = true
script = ExtResource( 1 )
path = "joypad/dpad_right"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer2/DPAD_Right"]
margin_left = 40.0
margin_top = 13.0
margin_right = 117.0
margin_bottom = 27.0
text = " DPAD Right"

[node name="Home" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer2"]
margin_top = 264.0
margin_right = 177.0
margin_bottom = 304.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer2/Home"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true
script = ExtResource( 1 )
path = "joypad/home"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer2/Home"]
margin_left = 40.0
margin_top = 13.0
margin_right = 83.0
margin_bottom = 27.0
text = " Home"

[node name="Share" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer2"]
margin_top = 308.0
margin_right = 177.0
margin_bottom = 348.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer2/Share"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
expand = true
script = ExtResource( 1 )
path = "joypad/share"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer2/Share"]
margin_left = 40.0
margin_top = 13.0
margin_right = 79.0
margin_bottom = 27.0
text = " Share"

[node name="L-Stick" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer2"]
margin_top = 352.0
margin_right = 177.0
margin_bottom = 392.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer2/L-Stick"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 19 )
expand = true
script = ExtResource( 1 )
path = "joypad/l_stick"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer2/L-Stick"]
margin_left = 40.0
margin_top = 13.0
margin_right = 102.0
margin_bottom = 27.0
text = " Left Stick"

[node name="R-Stick" type="HBoxContainer" parent="Controls/HBoxContainer/VBoxContainer2"]
margin_top = 396.0
margin_right = 177.0
margin_bottom = 436.0
custom_constants/separation = 0

[node name="ControllerTextureRect" type="TextureRect" parent="Controls/HBoxContainer/VBoxContainer2/R-Stick"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 12 )
expand = true
script = ExtResource( 1 )
path = "joypad/r_stick"

[node name="Label" type="Label" parent="Controls/HBoxContainer/VBoxContainer2/R-Stick"]
margin_left = 40.0
margin_top = 13.0
margin_right = 110.0
margin_bottom = 27.0
text = " Right Stick"

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 414.0
margin_right = 866.0
margin_bottom = 467.0

[node name="Auto" type="Button" parent="Buttons"]
margin_right = 452.0
margin_bottom = 29.0
size_flags_vertical = 3
text = "[ Set to automatic ]"

[node name="Luna" type="Button" parent="Buttons"]
margin_top = 33.0
margin_right = 452.0
margin_bottom = 63.0
size_flags_vertical = 3
text = "Amazon Luna"

[node name="PS3" type="Button" parent="Buttons"]
margin_top = 67.0
margin_right = 452.0
margin_bottom = 96.0
size_flags_vertical = 3
text = "PlayStation 3"

[node name="PS4" type="Button" parent="Buttons"]
margin_top = 100.0
margin_right = 452.0
margin_bottom = 130.0
size_flags_vertical = 3
text = "PlayStation 4"

[node name="PS5" type="Button" parent="Buttons"]
margin_top = 134.0
margin_right = 452.0
margin_bottom = 164.0
size_flags_vertical = 3
text = "PlayStation 5"

[node name="Stadia" type="Button" parent="Buttons"]
margin_top = 168.0
margin_right = 452.0
margin_bottom = 197.0
size_flags_vertical = 3
text = "Google Stadia"

[node name="Steam" type="Button" parent="Buttons"]
margin_top = 201.0
margin_right = 452.0
margin_bottom = 231.0
size_flags_vertical = 3
text = "Steam Controller"

[node name="SteamDeck" type="Button" parent="Buttons"]
margin_top = 235.0
margin_right = 452.0
margin_bottom = 265.0
size_flags_vertical = 3
text = "Steam Deck"

[node name="Switch" type="Button" parent="Buttons"]
margin_top = 269.0
margin_right = 452.0
margin_bottom = 298.0
size_flags_vertical = 3
text = "Nintendo Switch Controller"

[node name="Joycon" type="Button" parent="Buttons"]
margin_top = 302.0
margin_right = 452.0
margin_bottom = 332.0
size_flags_vertical = 3
text = "Nintendo Switch JoyCon"

[node name="OUYA" type="Button" parent="Buttons"]
margin_top = 336.0
margin_right = 452.0
margin_bottom = 366.0
size_flags_vertical = 3
text = "OUYA"

[node name="Xbox360" type="Button" parent="Buttons"]
margin_top = 370.0
margin_right = 452.0
margin_bottom = 399.0
size_flags_vertical = 3
text = "Xbox 360"

[node name="XboxOne" type="Button" parent="Buttons"]
margin_top = 403.0
margin_right = 452.0
margin_bottom = 433.0
size_flags_vertical = 3
text = "Xbox One"

[node name="XboxSeries" type="Button" parent="Buttons"]
margin_top = 437.0
margin_right = 452.0
margin_bottom = 467.0
size_flags_vertical = 3
text = "Xbox Series"

[connection signal="pressed" from="Buttons/Auto" to="." method="_on_Auto_pressed"]
[connection signal="pressed" from="Buttons/Luna" to="." method="_on_Luna_pressed"]
[connection signal="pressed" from="Buttons/PS3" to="." method="_on_PS3_pressed"]
[connection signal="pressed" from="Buttons/PS4" to="." method="_on_PS4_pressed"]
[connection signal="pressed" from="Buttons/PS5" to="." method="_on_PS5_pressed"]
[connection signal="pressed" from="Buttons/Stadia" to="." method="_on_Stadia_pressed"]
[connection signal="pressed" from="Buttons/Steam" to="." method="_on_Steam_pressed"]
[connection signal="pressed" from="Buttons/SteamDeck" to="." method="_on_SteamDeck_pressed"]
[connection signal="pressed" from="Buttons/Switch" to="." method="_on_Switch_pressed"]
[connection signal="pressed" from="Buttons/Joycon" to="." method="_on_Joycon_pressed"]
[connection signal="pressed" from="Buttons/OUYA" to="." method="_on_ouya_pressed"]
[connection signal="pressed" from="Buttons/Xbox360" to="." method="_on_Xbox360_pressed"]
[connection signal="pressed" from="Buttons/XboxOne" to="." method="_on_XboxOne_pressed"]
[connection signal="pressed" from="Buttons/XboxSeries" to="." method="_on_XboxSeries_pressed"]
